test/tests/operators/read_ndjson/jobs_unsupported.txt
error: `_jobs` requires `_unordered`
 --> tests/operators/read_ndjson/jobs_unsupported.tql:5:19
  |
5 | read_ndjson _jobs=1
  |                   ^ 
  |
